styles.css
@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Hind:wght@300;400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

:root {

    --primary-purple-50: hsl(260, 100%, 95%);
    --primary-purple-300: hsl(264, 82%, 80%);
    --primary-purple-500: hsl(263, 55%, 52%);

    --neutral-white: hsl(0, 0%, 100%);
    --neutral-grey-100: hsl(214, 17%, 92%);
    --neutral-grey-200: hsl(0, 0%, 81%);
    --neutral-grey-400: hsl(224, 10%, 45%);
    --neutral-grey-500: hsl(217, 19%, 35%);
    --neutral-dark-blue: hsl(219, 29%, 14%);
    --neutral-black: hsl(0, 0%, 7%);
    --main-backgroud: #F6F5F6;
    --font-family: 'Barlow Semi Condensed', sans-serif;
}

*,
*::before,
*::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

body {
    font-family: var(--font-family);
    overflow-x: hidden;
    background-color: var(--main-backgroud);
    font-size: clamp(0.813rem, 1vw + 0.8rem, 1rem);
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

.testimonials {
    display: grid;
    grid-template-columns: repeat(1, 1fr);
    grid-template-rows: repeat(1, max-content);
    grid-column-gap: 1rem;
    grid-row-gap: 1rem;
    padding: 2rem;
}




.card {
    width: 100%;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    padding: 2rem;

    border-radius: .4rem;
    box-shadow: 40px 60px 50px -47px rgba(72, 85, 106, 24.74%);
}

.card:nth-child(1) {
    background-color: var(--primary-purple-500);
    color: var(--neutral-white);
}

.card:nth-child(2) {
    background-color: var(--neutral-grey-500);
    color: var(--neutral-white);
}

.card:nth-child(3) {
    background-color: var(--neutral-white);
    color: var(--neutral-black);
}

.card:nth-child(4) {
    background-color: var(--neutral-dark-blue);
    color: var(--neutral-grey-200);
}

.card:nth-child(5) {
    background-color: var(--neutral-white);
    color: var(--neutral-black);
}





.card .info {
    display: flex;
    gap: 1rem;
    justify-content: flex-start;
    align-items: center;
}



.card .info img {
    width: 3rem;
    object-fit: cover;
    border: .2rem solid var(--primary-purple-50);
    border-radius: 50%;
    overflow: hidden;
}

.user-details h3 {
    line-height: 110%;
}

.user-details p {
    font-size: 0.688rem;
    line-height: 110%;
}

.card .title {
    font-size: 1.25rem;
    font-weight: 600;
    line-height: 120%;
}

.card .content {
    line-height: 140%;
}

.card:nth-child(1) .content {
    color: var(--primary-purple-50);
}

.card:nth-child(2) .content,
.card:nth-child(4) .content {
    color: var(--neutral-grey-100);
}

.card:nth-child(3) .content,
.card:nth-child(5) .content {
    color: var(--neutral-grey-400);
}




@media screen and (min-width: 768px) {
    .testimonials {
        grid-template-columns: repeat(2, 1fr);
        grid-template-rows: repeat(4, max-content);
        padding: 2rem 6rem;
    }

    .card:nth-child(1) {
        grid-row: 1 / 1;
        grid-column: 1 / 6;
    }

    .card:nth-child(2) {
        grid-row: 2 / 2;
        grid-column: 1 / 6;
    }

    .card:nth-child(3) {
        grid-row: 3 / 3;
        grid-column: 1 / 2;
    }

    .card:nth-child(4) {
        grid-row: 3 / 3;
        grid-column: 2 / 6;
    }

    .card:nth-child(5) {
        grid-row: 4 / 5;
        grid-column: 1 / 6;
    }

}

@media screen and (min-width: 1440px) {
    .testimonials {
        grid-template-columns: repeat(5, 1fr);
        grid-template-rows: repeat(2, 1fr);
        padding: 2rem 8rem;
    }

    .card:nth-child(1) {
        grid-row: 1 / 2;
        grid-column: 1 / 4;
    }

    .card:nth-child(2) {
        grid-row: 1 / 2;
        grid-column: 4 / 5;
    }

    .card:nth-child(3) {
        grid-row: 2 / 3;
        grid-column: 1 / 2;
    }

    .card:nth-child(4) {
        grid-row: 2 / 3;
        grid-column: 2 / 5;
    }

    .card:nth-child(5) {
        grid-row: 1 / 3;
        grid-column: 5 / 6;
    }

}

